namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ri-dev
  labels:
    name: ri-dev
