gcpconfig-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  labels:
    app: frontend
    tier: frontend
spec:
  backend:
    serviceName: frontendsvc
    servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: gcr.io/testing01-221905/testingangular05
        imagePullPolicy: Always
        ports:
        - name: http-server
          containerPort: 80
